--- a/src/main/resources/templates/urlview.mustache
+++ b/src/main/resources/templates/urlview.mustache
@@ -1,10 +1,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Hello {{userName}}</title>
+    <title></title>
 </head>
 <body>
     <h1>{{attribute}}</h1>
-
 </body>
 </html>
