--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -165,6 +165,16 @@
                                             </tr>
                                         </tfoot>
                                         <tbody>
+                                                {{#allProducts}}
+                                                <tr>
+                                                <td>{{productId}}</td>
+                                                <td>{{userId}}</td>
+                                                <td>{{title}}</td>
+                                                <td>{{summary}}</td>
+                                            
+                                            </tr>
+  
+   {{/allProducts}}
                                             <tr>
                                                 <td>Tiger Nixon</td>
                                                 <td>System Architect</td>
