--- a/src/main/resources/static/css/Admin/styles.css
+++ b/src/main/resources/static/css/Admin/styles.css
@@ -47,6 +47,14 @@
   box-sizing: border-box;
 }
 
+.hide{
+
+visibility: hidden;
+display: none;
+
+}
+
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
