--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -96,35 +96,38 @@
                             <div class="col-xl-6">
                                 <div class="card mb-4">
                                  <div class="card-body">
-                                <form>
+                                 <form method="POST" action="/Admin/addProduct">
   <div class="form-group">
     <label for="exampleInputEmail1">Product name</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <input type="text" name="title" class="form-control" id="exampleInputEmail1"  placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">User id</label>
+    <input type="text" class="form-control" id="exampleInputPassword1"  name="userId" name="summary" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Summary</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" id="exampleInputPassword1" name="summary" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Type</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-   <div class="form-group">
-    <label for="exampleInputPassword1">Category</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" name="type" id="exampleInputPassword1" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Price</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" name="price" id="exampleInputPassword1" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Discount</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" name="discount" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Category</label>
+    <input type="text" class="form-control" name="category" id="exampleInputPassword1" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">PictureURL</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" id="exampleInputPassword1" name="productUrl" placeholder="Password">
   </div>
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -139,35 +142,34 @@
                             <div class="col-xl-6">
                             <div class="card mb-4">
                             <div class="card-body">
-                                      <form>
+                                      <form method="POST" action="/Admin/addUser">
          <div class="form-group">
     <label for="exampleInputEmail1">Firstname</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <input type="text" class="form-control" id="exampleInputEmail1" name ="firstName" aria-describedby="emailHelp" placeholder="Enter email">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Lastname</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" id="exampleInputPassword1" name ="lastName" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Phonenumber</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" id="exampleInputPassword1" name ="mobileNr"placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Email</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" id="exampleInputPassword1" name ="email" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="password" class="form-control" id="exampleInputPassword1" name ="password" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Authority</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" id="exampleInputPassword1" name ="admin" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Profile pictureURL</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" id="exampleInputPassword1" name ="pictureUrl" placeholder="Password">
   </div>
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
