--- a/src/main/resources/templates/Frontend/Admin/Admin.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Admin.mustache
@@ -123,7 +123,7 @@
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Category</label>
-    <input type="text" class="form-control" name="category" id="exampleInputPassword1" placeholder="Password">
+    <input type="text" class="form-control" name="categoryId" id="exampleInputPassword1" placeholder="Password">
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">PictureURL</label>
