--- a/src/main/resources/static/css/Main/style.css
+++ b/src/main/resources/static/css/Main/style.css
@@ -1,5 +1,5 @@
 
-body { font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400; color: #888; line-height: 30px; text-align: center; padding-top: 100px; }
+body { font-family: 'Open Sans', sans-serif; font-size: 15px; font-weight: 400; color: #888; line-height: 30px; text-align: center;}
 
 strong { font-weight: 600; }
 
@@ -18,131 +18,495 @@ img { max-width: 100%; }
 
 
 /***** General style, all sections *****/
+ul.dropdown-cart{
+    min-width:250px;
+}
+ul.dropdown-cart li .item{
+    display:block;
+    padding:3px 10px;
+    margin: 3px 0;
+}
+ul.dropdown-cart li .item:hover{
+    background-color:#f3f3f3;
+}
+ul.dropdown-cart li .item:after{
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
+
+ul.dropdown-cart li .item-left{
+    float:left;
+}
+ul.dropdown-cart li .item-left img,
+ul.dropdown-cart li .item-left span.item-info{
+    float:left;
+}
+ul.dropdown-cart li .item-left span.item-info{
+    margin-left:10px;   
+}
+ul.dropdown-cart li .item-left span.item-info span{
+    display:block;
+}
+ul.dropdown-cart li .item-right{
+    float:right;
+}
+ul.dropdown-cart li .item-right button{
+    margin-top:14px;
+}
 
 .form-inline {
 	display: inline-block;
 }
-.navbar-header.col {
-	padding: 0 !important;
-}
-.navbar {		
-	background: #fff;
-	padding-left: 16px;
-	padding-right: 16px;
-	border-bottom: 1px solid #d6d6d6;
-	box-shadow: 0 0 4px rgba(0,0,0,.1);
-}
-.nav-link img {
-	border-radius: 50%;
-	width: 36px;
-	height: 36px;
-	margin: -8px 0;
-	float: left;
-	margin-right: 10px;
-}
-.navbar .navbar-brand {
-	color: #555;
+
+.nav {
+	display: flex;
+	flex-wrap: wrap;
 	padding-left: 0;
-	padding-right: 50px;
-	font-family: 'Merienda One', sans-serif;
-}
-.navbar .navbar-brand i {
-	font-size: 20px;
-	margin-right: 5px;
-}
-.search-box {
-	position: relative;
-}	
-.search-box input {
-	box-shadow: none;
-	padding-right: 35px;
-	border-radius: 3px !important;
-}
-.search-box .input-group-addon {
-	min-width: 35px;
-	border: none;
-	background: transparent;
-	position: absolute;
-	right: 0;
-	z-index: 9;
-	padding: 7px;
-	height: 100%;
-}
-.search-box i {
-	color: #a0a5b1;
-	font-size: 19px;
-}
-.navbar .nav-item i {
-	font-size: 18px;
-}
-.navbar .dropdown-item i {
-	font-size: 16px;
-	min-width: 22px;
-}
-.navbar .nav-item.open > a {
-	background: none !important;
-}
-.navbar .dropdown-menu {
-	border-radius: 1px;
-	border-color: #e5e5e5;
-	box-shadow: 0 2px 8px rgba(0,0,0,.05);
-}
-.navbar .dropdown-menu a {
-	color: #777;
-	padding: 8px 20px;
-	line-height: normal;
-}
-.navbar .dropdown-menu a:hover, .navbar .dropdown-menu a:active {
-	color: #333;
-}	
-.navbar .dropdown-item .material-icons {
-	font-size: 21px;
-	line-height: 16px;
-	vertical-align: middle;
-	margin-top: -2px;
-}
-.navbar .badge {
+	margin-bottom: 0;
+	list-style: none;
+  }
+  
+  .nav-link {
+	display: block;
+	padding: 0.5rem 1rem;
+  }
+  .nav-link:hover, .nav-link:focus {
+	text-decoration: none;
+  }
+  .nav-link.disabled {
+	color: #6c757d;
+	pointer-events: none;
+	cursor: default;
+  }
+  
+  .nav-tabs {
+	border-bottom: 1px solid #dee2e6;
+  }
+  .nav-tabs .nav-item {
+	margin-bottom: -1px;
+  }
+  .nav-tabs .nav-link {
+	border: 1px solid transparent;
+	border-top-left-radius: 0.25rem;
+	border-top-right-radius: 0.25rem;
+  }
+  .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
+	border-color: #e9ecef #e9ecef #dee2e6;
+  }
+  .nav-tabs .nav-link.disabled {
+	color: #6c757d;
+	background-color: transparent;
+	border-color: transparent;
+  }
+  .nav-tabs .nav-link.active,
+  .nav-tabs .nav-item.show .nav-link {
+	color: #495057;
+	background-color: #fff;
+	border-color: #dee2e6 #dee2e6 #fff;
+  }
+  .nav-tabs .dropdown-menu {
+	margin-top: -1px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+  }
+  
+  .nav-pills .nav-link {
+	border-radius: 0.25rem;
+  }
+  .nav-pills .nav-link.active,
+  .nav-pills .show > .nav-link {
 	color: #fff;
-	background: #f44336;
-	font-size: 11px;
-	border-radius: 20px;
-	position: absolute;
-	min-width: 10px;
-	padding: 4px 6px 0;
-	min-height: 18px;
-	top: 5px;
-}
-.navbar a.notifications, .navbar a.messages {
+	background-color: #007bff;
+  }
+  
+  .nav-fill > .nav-link,
+  .nav-fill .nav-item {
+	flex: 1 1 auto;
+	text-align: center;
+  }
+  
+  .nav-justified > .nav-link,
+  .nav-justified .nav-item {
+	flex-basis: 0;
+	flex-grow: 1;
+	text-align: center;
+  }
+  
+  .tab-content > .tab-pane {
+	display: none;
+  }
+  .tab-content > .active {
+	display: block;
+  }
+  
+  .navbar {
 	position: relative;
-	margin-right: 10px;
-}
-.navbar a.messages {
-	margin-right: 20px;
-}
-.navbar a.notifications .badge {
-	margin-left: -8px;
-}
-.navbar a.messages .badge {
-	margin-left: -4px;
-}	
-.navbar .active a, .navbar .active a:hover, .navbar .active a:focus {
-	background: transparent !important;
-}
-@media (min-width: 1200px){
-	.form-inline .input-group {
-		width: 300px;
-		margin-left: 30px;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+	padding: 0.5rem 1rem;
+  }
+  .navbar .container,
+  .navbar .container-fluid,
+  .navbar .container-sm,
+  .navbar .container-md,
+  .navbar .container-lg,
+  .navbar .container-xl {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+  }
+  .navbar-brand {
+	display: inline-block;
+	padding-top: 0.3125rem;
+	padding-bottom: 0.3125rem;
+	margin-right: 1rem;
+	font-size: 1.25rem;
+	line-height: inherit;
+	white-space: nowrap;
+  }
+  .navbar-brand:hover, .navbar-brand:focus {
+	text-decoration: none;
+  }
+  
+  .navbar-nav {
+	display: flex;
+	flex-direction: column;
+	padding-left: 0;
+	margin-bottom: 0;
+	list-style: none;
+  }
+  .navbar-nav .nav-link {
+	padding-right: 0;
+	padding-left: 0;
+  }
+  .navbar-nav .dropdown-menu {
+	position: static;
+	float: none;
+  }
+  
+  .navbar-text {
+	display: inline-block;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+  }
+  
+  .navbar-collapse {
+	flex-basis: 100%;
+	flex-grow: 1;
+	align-items: center;
+  }
+  
+  .navbar-toggler {
+	padding: 0.25rem 0.75rem;
+	font-size: 1.25rem;
+	line-height: 1;
+	background-color: transparent;
+	border: 1px solid transparent;
+	border-radius: 0.25rem;
+  }
+  .navbar-toggler:hover, .navbar-toggler:focus {
+	text-decoration: none;
+  }
+  
+  .navbar-toggler-icon {
+	display: inline-block;
+	width: 1.5em;
+	height: 1.5em;
+	vertical-align: middle;
+	content: "";
+	background: no-repeat center center;
+	background-size: 100% 100%;
+  }
+  
+  @media (max-width: 575.98px) {
+	.navbar-expand-sm > .container,
+  .navbar-expand-sm > .container-fluid,
+  .navbar-expand-sm > .container-sm,
+  .navbar-expand-sm > .container-md,
+  .navbar-expand-sm > .container-lg,
+  .navbar-expand-sm > .container-xl {
+	  padding-right: 0;
+	  padding-left: 0;
 	}
-}
-@media (max-width: 1199px){
-	.form-inline {
-		display: block;
-		margin-bottom: 10px;
+  }
+  @media (min-width: 576px) {
+	.navbar-expand-sm {
+	  flex-flow: row nowrap;
+	  justify-content: flex-start;
 	}
-	.input-group {
-		width: 100%;
+	.navbar-expand-sm .navbar-nav {
+	  flex-direction: row;
 	}
-}
+	.navbar-expand-sm .navbar-nav .dropdown-menu {
+	  position: absolute;
+	}
+	.navbar-expand-sm .navbar-nav .nav-link {
+	  padding-right: 0.5rem;
+	  padding-left: 0.5rem;
+	}
+	.navbar-expand-sm > .container,
+  .navbar-expand-sm > .container-fluid,
+  .navbar-expand-sm > .container-sm,
+  .navbar-expand-sm > .container-md,
+  .navbar-expand-sm > .container-lg,
+  .navbar-expand-sm > .container-xl {
+	  flex-wrap: nowrap;
+	}
+	.navbar-expand-sm .navbar-collapse {
+	  display: flex !important;
+	  flex-basis: auto;
+	}
+	.navbar-expand-sm .navbar-toggler {
+	  display: none;
+	}
+  }
+  @media (max-width: 767.98px) {
+	.navbar-expand-md > .container,
+  .navbar-expand-md > .container-fluid,
+  .navbar-expand-md > .container-sm,
+  .navbar-expand-md > .container-md,
+  .navbar-expand-md > .container-lg,
+  .navbar-expand-md > .container-xl {
+	  padding-right: 0;
+	  padding-left: 0;
+	}
+  }
+  @media (min-width: 768px) {
+	.navbar-expand-md {
+	  flex-flow: row nowrap;
+	  justify-content: flex-start;
+	}
+	.navbar-expand-md .navbar-nav {
+	  flex-direction: row;
+	}
+	.navbar-expand-md .navbar-nav .dropdown-menu {
+	  position: absolute;
+	}
+	.navbar-expand-md .navbar-nav .nav-link {
+	  padding-right: 0.5rem;
+	  padding-left: 0.5rem;
+	}
+	.navbar-expand-md > .container,
+  .navbar-expand-md > .container-fluid,
+  .navbar-expand-md > .container-sm,
+  .navbar-expand-md > .container-md,
+  .navbar-expand-md > .container-lg,
+  .navbar-expand-md > .container-xl {
+	  flex-wrap: nowrap;
+	}
+	.navbar-expand-md .navbar-collapse {
+	  display: flex !important;
+	  flex-basis: auto;
+	}
+	.navbar-expand-md .navbar-toggler {
+	  display: none;
+	}
+  }
+  @media (max-width: 991.98px) {
+	.navbar-expand-lg > .container,
+  .navbar-expand-lg > .container-fluid,
+  .navbar-expand-lg > .container-sm,
+  .navbar-expand-lg > .container-md,
+  .navbar-expand-lg > .container-lg,
+  .navbar-expand-lg > .container-xl {
+	  padding-right: 0;
+	  padding-left: 0;
+	}
+  }
+  @media (min-width: 992px) {
+	.navbar-expand-lg {
+	  flex-flow: row nowrap;
+	  justify-content: flex-start;
+	}
+	.navbar-expand-lg .navbar-nav {
+	  flex-direction: row;
+	}
+	.navbar-expand-lg .navbar-nav .dropdown-menu {
+	  position: absolute;
+	}
+	.navbar-expand-lg .navbar-nav .nav-link {
+	  padding-right: 0.5rem;
+	  padding-left: 0.5rem;
+	}
+	.navbar-expand-lg > .container,
+  .navbar-expand-lg > .container-fluid,
+  .navbar-expand-lg > .container-sm,
+  .navbar-expand-lg > .container-md,
+  .navbar-expand-lg > .container-lg,
+  .navbar-expand-lg > .container-xl {
+	  flex-wrap: nowrap;
+	}
+	.navbar-expand-lg .navbar-collapse {
+	  display: flex !important;
+	  flex-basis: auto;
+	}
+	.navbar-expand-lg .navbar-toggler {
+	  display: none;
+	}
+  }
+  @media (max-width: 1199.98px) {
+	.navbar-expand-xl > .container,
+  .navbar-expand-xl > .container-fluid,
+  .navbar-expand-xl > .container-sm,
+  .navbar-expand-xl > .container-md,
+  .navbar-expand-xl > .container-lg,
+  .navbar-expand-xl > .container-xl {
+	  padding-right: 0;
+	  padding-left: 0;
+	}
+  }
+  @media (min-width: 1200px) {
+	.navbar-expand-xl {
+	  flex-flow: row nowrap;
+	  justify-content: flex-start;
+	}
+	.navbar-expand-xl .navbar-nav {
+	  flex-direction: row;
+	}
+	.navbar-expand-xl .navbar-nav .dropdown-menu {
+	  position: absolute;
+	}
+	.navbar-expand-xl .navbar-nav .nav-link {
+	  padding-right: 0.5rem;
+	  padding-left: 0.5rem;
+	}
+	.navbar-expand-xl > .container,
+  .navbar-expand-xl > .container-fluid,
+  .navbar-expand-xl > .container-sm,
+  .navbar-expand-xl > .container-md,
+  .navbar-expand-xl > .container-lg,
+  .navbar-expand-xl > .container-xl {
+	  flex-wrap: nowrap;
+	}
+	.navbar-expand-xl .navbar-collapse {
+	  display: flex !important;
+	  flex-basis: auto;
+	}
+	.navbar-expand-xl .navbar-toggler {
+	  display: none;
+	}
+  }
+  .navbar-expand {
+	flex-flow: row nowrap;
+	justify-content: flex-start;
+  }
+  .navbar-expand > .container,
+  .navbar-expand > .container-fluid,
+  .navbar-expand > .container-sm,
+  .navbar-expand > .container-md,
+  .navbar-expand > .container-lg,
+  .navbar-expand > .container-xl {
+	padding-right: 0;
+	padding-left: 0;
+  }
+  .navbar-expand .navbar-nav {
+	flex-direction: row;
+  }
+  .navbar-expand .navbar-nav .dropdown-menu {
+	position: absolute;
+  }
+  .navbar-expand .navbar-nav .nav-link {
+	padding-right: 0.5rem;
+	padding-left: 0.5rem;
+  }
+  .navbar-expand > .container,
+  .navbar-expand > .container-fluid,
+  .navbar-expand > .container-sm,
+  .navbar-expand > .container-md,
+  .navbar-expand > .container-lg,
+  .navbar-expand > .container-xl {
+	flex-wrap: nowrap;
+  }
+  .navbar-expand .navbar-collapse {
+	display: flex !important;
+	flex-basis: auto;
+  }
+  .navbar-expand .navbar-toggler {
+	display: none;
+  }
+  
+  .navbar-light .navbar-brand {
+	color: rgba(0, 0, 0, 0.9);
+  }
+  .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
+	color: rgba(0, 0, 0, 0.9);
+  }
+  .navbar-light .navbar-nav .nav-link {
+	color: rgba(0, 0, 0, 0.5);
+  }
+  .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+	color: rgba(0, 0, 0, 0.7);
+  }
+  .navbar-light .navbar-nav .nav-link.disabled {
+	color: rgba(0, 0, 0, 0.3);
+  }
+  .navbar-light .navbar-nav .show > .nav-link,
+  .navbar-light .navbar-nav .active > .nav-link,
+  .navbar-light .navbar-nav .nav-link.show,
+  .navbar-light .navbar-nav .nav-link.active {
+	color: rgba(0, 0, 0, 0.9);
+  }
+  .navbar-light .navbar-toggler {
+	color: rgba(0, 0, 0, 0.5);
+	border-color: rgba(0, 0, 0, 0.1);
+  }
+  .navbar-light .navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  }
+  .navbar-light .navbar-text {
+	color: rgba(0, 0, 0, 0.5);
+  }
+  .navbar-light .navbar-text a {
+	color: rgba(0, 0, 0, 0.9);
+  }
+  .navbar-light .navbar-text a:hover, .navbar-light .navbar-text a:focus {
+	color: rgba(0, 0, 0, 0.9);
+  }
+  
+  .navbar-dark .navbar-brand {
+	color: #fff;
+  }
+  .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
+	color: #fff;
+  }
+  .navbar-dark .navbar-nav .nav-link {
+	color: rgba(255, 255, 255, 0.5);
+  }
+  .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
+	color: rgba(255, 255, 255, 0.75);
+  }
+  .navbar-dark .navbar-nav .nav-link.disabled {
+	color: rgba(255, 255, 255, 0.25);
+  }
+  .navbar-dark .navbar-nav .show > .nav-link,
+  .navbar-dark .navbar-nav .active > .nav-link,
+  .navbar-dark .navbar-nav .nav-link.show,
+  .navbar-dark .navbar-nav .nav-link.active {
+	color: #fff;
+  }
+  .navbar-dark .navbar-toggler {
+	color: rgba(255, 255, 255, 0.5);
+	border-color: rgba(255, 255, 255, 0.1);
+  }
+  .navbar-dark .navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  }
+  .navbar-dark .navbar-text {
+	color: rgba(255, 255, 255, 0.5);
+  }
+  .navbar-dark .navbar-text a {
+	color: #fff;
+  }
+  .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
+	color: #fff;
+  }
 
 .section-container { margin: 0 auto; padding-bottom: 80px; }
 
