--- a/src/main/resources/templates/Frontend/Admin/Users.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Users.mustache
@@ -156,7 +156,7 @@ $(document).ready(function () {
             return $(this).text();
         }).get();
 
-        window.location.href = '/Admin/'+tableData[0];
+        window.location.href = '/Admin/User/'+tableData[0];
 });
 
 });
