--- a/src/main/resources/templates/Frontend/Main/Index.mustache
+++ b/src/main/resources/templates/Frontend/Main/Index.mustache
@@ -20,97 +20,111 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <style>
+  .card-body-prod{
+	  padding:0;
+  }
 
+  
+  </style>
 
 
 </head>
-
 <body>
-
 <!-- Top menu -->
-<nav class="navbar navbar-dark fixed-top navbar-expand-md">
-	<div class="container">
-		<a class="navbar-brand" href="index.html">Bootstrap 4 Carousel with Multiple Items</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
+     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+			
+            <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
+            <!-- Navbar Search-->
+            <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-3 my-2 my-md-0">
+                <div class="input-group">
+                    <input class="form-control" type="text" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2" />
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
+                    </div>
+                </div>
+            </form>
+			<li class="dropdown" style="padding-right:100px">
+	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> <span class="glyphicon glyphicon-shopping-cart"></span> 7 - Items<span class="caret"></span></a>
+	<ul class="dropdown-menu dropdown-cart" role="menu">
 
-			<!-- Wallpapers-->
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Wallpapers
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Wallpapers</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</div>
-				</li>
-				<!-- Wallpapers-->
+		<li>
+			<span class="item">
+			  <span class="item-left">
+				  <img src="http://lorempixel.com/50/50/" alt="" />
+				  <span class="item-info">
+					  <span>Item name</span>
+					  <span>23$</span>
+				  </span>
+			  </span>
+			  <span class="item-right">
+				  <button class="btn btn-xs btn-danger pull-right">x</button>
+			  </span>
+		  </span>
+		</li>
 
-				<!-- Vectors-->
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Vectors
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Vectors</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</div>
-				</li>
-				<!-- Vectors-->
 
-				<!-- Stock photos-->
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Stock photos
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Stock photos</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</div>
-				</li>
-				<!-- Stock photos-->
+		<li>
+			<span class="item">
+			  <span class="item-left">
+				  <img src="http://lorempixel.com/50/50/" alt="" />
+				  <span class="item-info">
+					  <span>Item name</span>
+					  <span>23$</span>
+				  </span>
+			  </span>
+			  <span class="item-right">
+				  <button class="btn btn-xs btn-danger pull-right">x</button>
+			  </span>
+		  </span>
+		</li>
+		<li>
+			<span class="item">
+			  <span class="item-left">
+				  <img src="http://lorempixel.com/50/50/" alt="" />
+				  <span class="item-info">
+					  <span>Item name</span>
+					  <span>23$</span>
+				  </span>
+			  </span>
+			  <span class="item-right">
+				  <button class="btn btn-xs btn-danger pull-right">x</button>
+			  </span>
+		  </span>
+		</li>
+		<li>
+			<span class="item">
+			  <span class="item-left">
+				  <img src="http://lorempixel.com/50/50/" alt="" />
+				  <span class="item-info">
+					  <span>Item name</span>
+					  <span>23$</span>
+				  </span>
+			  </span>
+			  <span class="item-right">
+				  <button class="btn btn-xs btn-danger pull-right">x</button>
+			  </span>
+		  </span>
+		</li>
+		<li class="divider"></li>
+		<li><a class="text-center" href="">View Cart</a></li>
+	</ul>
+  </li>
 
-				<!-- Outlet-->
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Outlet
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Outlet</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</div>
-				</li>
-
-			</ul>
-			<div class="navbar-nav ml-auto">
-				<a href="#" class="nav-item nav-link notifications"><i class="fa fa-bell-o"></i><span class="badge">1</span></a>
-				<a href="#" class="nav-item nav-link messages"><i class="fa fa-envelope-o"></i><span class="badge">10</span></a></a>
-				<div class="nav-item dropdown">
-					<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"><img src="assets/img/profile.png" class="avatar" alt="Avatar"> Paula Wilson <b class="caret"></b></a>
-					<div class="dropdown-menu">
-						<a href="#" class="dropdown-item"><i class="fa fa-user-o"></i> Profile</a></a>
-						<a href="#" class="dropdown-item"><i class="fa fa-calendar-o"></i> Calendar</a></a>
-						<a href="#" class="dropdown-item"><i class="fa fa-sliders"></i> Settings</a></a>
-						<div class="dropdown-divider"></div>
-						<a href="#" class="dropdown-item"><i class="material-icons">&#xE8AC;</i> Logout</a></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</nav>
-
+            <!-- Navbar-->
+            <ul class="navbar-nav ml-auto ml-md-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                        <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" href="#">Activity Log</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="login.html">Logout</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
 <!-- Top content -->
 <div class="top-content">
 	<div class="container-fluid">
@@ -155,45 +169,29 @@
 
 <!-- Section 1 -->
 
+	
 <div class="container">
-	<div class="row row-cols-1 row-cols-md-3 g-4">
-		<div class="col">
-			<div class="card h-100">
-				<img src="..." class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-				</div>
-			</div>
-		</div>
-		<div class="col">
-			<div class="card h-100">
-				<img src="..." class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a short card.</p>
-				</div>
-			</div>
-		</div>
-		<div class="col">
-			<div class="card h-100">
-				<img src="..." class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-				</div>
-			</div>
-		</div>
-		<div class="col">
-			<div class="card h-100">
-				<img src="..." class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="row">
+   
+
+  {{#allProducts}}
+<div class="col-sm-3">
+<div class="card">
+  <div class="card-body-prod">
+     <a href="http://localhost:8888/Index/{{productId}}">
+
+  <img src="{{productUrl}}" alt="Italian Trulli" href>
+       </a>
+  </div>
+
+</div>
+
+</div>
+ {{/allProducts}}
+    
+     
+</div>
+</div>
 </div>
 
 
