--- a/src/main/resources/templates/urlview.mustache
+++ b/src/main/resources/templates/urlview.mustache
@@ -1,11 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title></title>
+    <title>Hello World!</title>
 </head>
 <body>
-    {{#allProducts}}
-        <div><h2>{{userId}}, {{price}} {{productId}},{{summary}}, {{publishedAt}}</h2></div>
-    {{/allProducts}}
+<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
 </body>
 </html>
